# scylla-cluster-tests

./: .coderabbit.yaml  .git-blame-ignore-revs  .gitignore  .groovylintrc.json  .pre-commit-config.yaml  AGENTS.md  CALLBACK_BASED_CONFIG_PLAN.md  CLAUDE.md  CMakeLists.txt  COMMIT_MESSAGE_ENV_REMOVAL.md  Dockerfile  FIND_AMI_EQUIVALENT_README.md  GCE_PROVISIONING_PLAN.md  IMPLEMENTATION_SUMMARY.md  JENKINSFILE_COPILOT_INTEGRATION.md  Jenkinsfile  README.md  README.rst  STRESS_PARAMETER_SPLIT_GUIDE.md  add_new_dc_test.py  admission_control_overload_test.py  ami.py  ami_test.py  artifacts_test.py  authorized_labels.yaml  backup_restore_comparison.py  big_cluster.py  big_cluster_test.py  build_cluster_test.py  cdc_replication_test.py  cluster.py  cluster_configuration_tests.py  cluster_quorum_restore_test.py  collect_diagnosis_data_test.py  commitlint.config.js  conftest.py  corrupt_then_rebuild_test.py  cql_test.py  cqlproxy_test.py  custom_cs_test.py  (+135 more)
.claude/: settings.json
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  auto_assign.yml  copilot-instructions.md  dependabot.yml  dump_issues.py  issue_template.md  labels.yml  mergify.yml  pull_request_template.md  search_commits.py
_linux/: keymap.xml
argus/: _version.py  how_to_update.md
argus_report_templates/: email_report_performance.yaml  email_report_performance_microbenchmarks.yaml  email_report_spark_migrator.yaml  email_report_template_basic.yaml
configurations/: 2TB_high_disk_used_capacity.yaml  adaptive_timeout_multipliers.yaml  advanced-rpc-compression.yaml  audit.yaml  auth_cassandra.yaml  c-s-driver-version-4.yaml  capacity_reservation.yaml  cs-compaction-strategy-lcs.yaml  cs-uniform-distribution.yaml  custom-d1-workload2-repair.yaml  custom-smp-per-node-for-repair.yaml  db-nodes-shards-random.yaml  disable-ear.yaml  disable_client_encrypt.yaml  disable_cluster_health_check.yaml  disable_hinted_handoff.yaml  disable_kms.yaml  disable_kms_key_rotation.yaml  disable_rbno.yaml  disable_shared_aware_drivers.yaml  disable_simulated_racks.yaml  disable_speculative_retry.yaml  enable_agent.yaml  enable_force_gossip_changes_on_upgrade.yaml  enable_tablets_on_upgrade.yaml  enable_views_with_tablets_on_upgrade.yaml  exclude-vnode-to-tablet-migration-limitations.yaml  force-gossip-topology-changes.yaml  force_gossip_topology_changes.yaml  grow-shrink-cluster-parallel-nemesis.yaml  hytrust-kmip-ear.yaml  io.conf  io_properties.yaml  issue_2420_reproducer.yaml  issue_2420_sanity.yaml  jepsen.yaml  kmip-ear.yaml  kms-ear.yaml  ldap-authenticator.yaml  ldap-authorization-and-authentication.yaml  (+49 more)
data/: known_cyclic_imports.yml
data_dir/: aa-profile.yaml  benchmark_patch.diff  big-cluster.yaml  break_scylla.sh  c-s_lwt_basic.yaml  c-s_lwt_big_data.yaml  c-s_lwt_big_data_multidc.yaml  c-s_null_inserts.yaml  c-s_profile_2mv_2queries.yaml  c-s_profile_2si_2queries.yaml  c-s_profile_3si_5queries.yaml  c-s_profile_4mv_5queries.yaml  c-s_profile_4mv_5queries_tablets_disabled.yaml  c-s_uda_udf.yaml  cassandra-monitoring-dashboard.json  cassandra-stress-custom-mixed-narrow-wide-row.yaml  cassandra-stress-custom.yaml  cdc_profile.yaml  cdc_profile_400gb.yaml  cdc_profile_400gb_postimage.yaml  cdc_profile_400gb_preimage.yaml  cdc_profile_400gb_preimage_postimage.yaml  cdc_profile_multidc.yaml  cdc_profile_multidc_postimage.yaml  cdc_profile_multidc_preimage.yaml  cdc_profile_multidc_preimage_postimage.yaml  cdc_profile_postimage.yaml  cdc_profile_preimage.yaml  cdc_profile_preimage_postimage.yaml  cdc_replication_profile.yaml  complex_schema.yaml  configure-cassandra-for-cluster-growth.sh  corrupt_sstables.sh  cs_lwt_commitlog_profile.yaml  cs_lwt_perf_big.yaml  cs_lwt_perf_small.yaml  cs_multidc_mv_lcs.yaml  cs_multidc_si_lcs.yaml  cs_mv_basic_profile_by_firstname_id.yaml  cs_mv_basic_profile_by_id_firstname.yaml  (+64 more)
defaults/: aws_config.yaml  aws_emr_config.yaml  azure_config.yaml  baremetal_config.yaml  cloud_config.yaml  docker_config.yaml  gce_config.yaml  k8s_eks_config.yaml  k8s_gce_minikube_config.yaml  k8s_gke_config.yaml  k8s_local_kind_aws_config.yaml  k8s_local_kind_config.yaml  k8s_local_kind_gce_config.yaml  k8s_local_minikube_config.yaml  libvirt_config.yaml  manager_persistent_snapshots.yaml  manager_restore_benchmark_snapshots.yaml  manager_versions.yaml  oci_config.yaml  openstack_config.yaml  perftune_results.json  severities.yaml  test_default.yaml
docker/: docker_mocked_as_podman
docs/: alternator-streams-test.plantuml  artifacts_test.md  aws-emr-permissions.md  aws_configuration.md  bisecting-with-sct.md  building-custom-cql-stress-image.md  claude-worktree-workflow.md  collected-logs.md  configuration_options.md  contrib.md  cross-cloud-sizing.md  cs-to-scylla-migration.md  cyclic-import-detection.md  diagnostic_collector.md  docker-backend-nemesis.md  docker-backend-overview.md  docker-loaders.md  faq.md  full-version-tag-usage.md  gcp_create_new_project.md  health_monitor_design_en.md  hydra-create-es-index.md  install-local-env.md  integration_test_timeout_tracking.md  jenkins-billing-project-parameter.md  jenkinsfile_descriptions_copilot.md  job_defines_format.md  k8s-functional-test.md  k8s-multitenancy.md  kafka-setup.plantuml  kafka.md  kernel-panic-detection.md  keystore-secrets-manager.md  loader_usage.md  longevity.md  maintainers-handbook-topics.md  maintainers-handbook.md  microbenchmarking.md  monitoring-images.md  nemesis.md  (+31 more)
etc/: rsyslog.conf
internal_test_data/: complex_test_case_with_version.yaml  cs_user_profile.yaml  enospc-30mins_new.yaml  longevity-50GB-4days_new.yaml  manager-regression-multiDC-set-distro_new.yaml  minimal_test_case.yaml  multi_region_dc_test_case.yaml  negative_fullscan_param.yaml  nemesis_selector_list.yaml  nemesis_selector_list_of_list.yaml  network_config_interface_not_defined.yaml  network_config_interface_param_not_defined.yaml  network_config_interface_param_public_not_primary.yaml  simple_test_case.yaml  stress_cmd_with_bad_profile.yaml  unknown_param_in_config.yaml
jenkins-pipelines/: EaR-longevity-kmip-200gb-6h.jenkinsfile  (+389 more)
(+5099 files in other folders)
